[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://HUD/Menu/MenuButton.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.333333, 0.333333, 0.333333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/UnpauseButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 88 ), Vector2( 224, 88 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/QuitButton:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 128 ), Vector2( 224, 128 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.333333, 0.333333, 0.333333, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/UnpauseButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 88 ), Vector2( 512, 88 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/QuitButton:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 128 ), Vector2( -64, 128 ) ]
}

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
z_index = 5
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 1 )
anims/exit = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UnpauseButton" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = -5.96046e-08
margin_left = 512.0
margin_top = 88.0
margin_right = 576.0
margin_bottom = 152.0
text = "Unpause"

[node name="QuitButton" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = -5.96046e-08
margin_left = -64.0
margin_top = 128.0
margin_right = 6.10352e-05
margin_bottom = 192.0
text = "Quit"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CanvasLayer/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_UnpauseButton2_pressed"]
